# millicall-pbx

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  connection.md  docker-compose.yml  install.sh  pyproject.toml  whattodo.md
.github/workflows/: ci.yml  docs.yml
asterisk_templates/: ari.conf  ari.conf.j2  cdr.conf  cdr_csv.conf  cdr_custom.conf  extensions.conf.j2  indications.conf  modules.conf  pjsip.conf.j2  pjsip_notify.conf
deploy/: deploy.sh  entrypoint.sh  install-docker.sh  setup-host-network.sh
docs/: firewall.md  setup.md
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml
frontend/: .dockerignore  Dockerfile  biome.json  index.html  nginx.conf  openapi.json  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: DataTable.stories.tsx  DataTable.tsx  DialGuideModal.tsx  FormCard.stories.tsx  FormCard.tsx  Modal.stories.tsx  Modal.tsx  PageHead.stories.tsx  PageHead.tsx  Pagination.tsx  Tag.stories.tsx  Tag.tsx
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_devices.py  003_add_ai_agents.py  004_add_settings.py  005_add_call_logs.py  006_unify_extensions.py  007_add_cdr.py  008_add_trunks.py  009_add_users.py  010_add_workflows.py  011_workflow_default_tts.py  012_add_contacts.py  013_add_user_role.py  014_add_device_active.py
scripts/: generate-env.sh
src/millicall/: cli.py  config.py  main.py  mcp_server.py
templates/: base.html  dashboard.html  settings.html
templates/agents/: form.html  list.html
templates/call_history/: detail.html  list.html
templates/cdr/: list.html
templates/devices/: list.html  provision.html
templates/extensions/: form.html  list.html
templates/peers/: form.html  list.html
templates/trunks/: form.html  list.html
(+112 files in other folders)
