[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "millicall"
version = "0.1.0"
description = "Millicall PBX - IP-PBX management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websockets>=13.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "mcp>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "ty>=0.0.1a7",
]

[project.scripts]
millicall = "millicall.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["millicall"]

[tool.hatch.build.targets.wheel]
packages = ["src/millicall"]
